--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Ambetter Design System Elements</title>
   <!-- <link rel="shortcut icon" href="https://material.io/favicon.ico"> -->
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"> -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"> -->
   <link rel="stylesheet" href="material.css">
@@ -29,21 +29,24 @@
   <div class="demo-grid mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div class="demo-cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-12-mobile">
-        <h1>Let us help you speak doctor</h1>
+        <h1 class="jumbo">Jumbo - Let us help you speak doctor</h1>
+        <h1 class="hero">Hero - Let us help you speak doctor</h1>
+        
+        <h1>h1 - Let us help you speak doctor</h1>
         <p class="lg-body">This is the large copy at 20px and is used for subtitles under larger headers or to stand out copy.</p>
 
-        <h2>Pregnancy and maternity leave</h2>
+        <h2>h2 - Pregnancy and maternity leave</h2>
         <p>This is the baseline copy at 18px that is to be used for <strong>standard subtitles and web copy</strong> across the board for better readability.</p>
 
-        <h3>What does my Maternity Care cover?</h3>
+        <h3>h3 - What does my Maternity Care cover?</h3>
         <p class="sm-body">This is the small copy at 16px and is used for <strong>web copy</strong> that doesn't need to be big but still readable.</p>
 
-        <h4>Related services and more information about us</h4>
+        <h4>h4 - Related services y and more information about us</h4>
         <p class="lg-caption">This is the small copy at 14px and is used for <b>labels and captions</b> that doesn't need to be big but still readable.</p>
         <p class="caption">This is the small copy at 13px and is used for <b>labels and captions</b> that doesn't need to be big but still readable.</p>
         <p class="caption">• Download the ambetter App<br>• Subscribe to the AmbetterNews Newsletter<br>• FAQ<br>• MyHealth<br>• Wellness Survey<br>• Terms & Conditions<br>• Privacy policy</p>
 
-        <h5>Disclaimers, intellectual property and much more</h5>
+        <h5>h5 - Disclaimers, y intellectual property and much more</h5>
         <p class="xs-caption">This is the small copy at 11px and is used for <b>legalese text</b> that doesn't need to be big but still readable.</p>
         <p class="xs-caption">©2019 Ambetter Health. All rights reserved.</p>
 
