Removes the 'y' from the text

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         <h3>h3 - What does my Maternity Care cover?</h3>
         <p class="sm-body">This is the small copy at 16px and is used for <strong>web copy</strong> that doesn't need to be big but still readable.</p>
 
-        <h4>h4 - Related services y and more information about us</h4>
+        <h4>h4 - Related services and more information about us</h4>
         <p class="lg-caption">This is the small copy at 14px and is used for <b>labels and captions</b> that doesn't need to be big but still readable.</p>
         <p class="caption">This is the small copy at 13px and is used for <b>labels and captions</b> that doesn't need to be big but still readable.</p>
         <p class="caption">• Download the ambetter App<br>• Subscribe to the AmbetterNews Newsletter<br>• FAQ<br>• MyHealth<br>• Wellness Survey<br>• Terms & Conditions<br>• Privacy policy</p>
 
-        <h5>h5 - Disclaimers, y intellectual property and much more</h5>
+        <h5>h5 - Disclaimers, intellectual property and much more</h5>
         <p class="xs-caption">This is the small copy at 11px and is used for <b>legalese text</b> that doesn't need to be big but still readable.</p>
         <p class="xs-caption">©2019 Ambetter Health. All rights reserved.</p>
 
